Wed Apr 28 16:28:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/unixsocket.c (sendmsg_blocking, recvmsg_blocking):
	  define only when used.

	* ext/socket/rubysocket.h: non-implemented method definitions need
	  to be shared.

Wed Apr 28 10:27:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vsnprintf.c (ruby_vsnprintf, ruby_snprintf): suppress warnings.
	  why return int in spite of the arguments of size_t?

Wed Apr 28 09:49:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/compile_prelude.rb: enable optimization.

Wed Apr 28 09:43:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (warn_balanced): do not warn for EXPR_ENDFN.

Tue Apr 27 23:57:04 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval.c (ruby_cleanup): add exception guard around code running
	  signal handler (of r27513).  Absence of the guard made
	  bootstraptest/test_thread.rb fail sometimes.

Tue Apr 27 22:55:29 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* insns.def (onceinlinecache): add exclusion control for a region
	  between onceinlinecache and setinlinecache.  [ruby-dev:39768]

Tue Apr 27 22:40:54 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* iseq.c (set_relation): do not use top_wrapper as bottom of cref,
	  which caused constant lookup error when "wrapped load" is used;
	  instead, use Object as bottom, and push top_wrapper on Object.
	  [ruby-core:25039]

Tue Apr 27 21:24:40 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval.c (ruby_cleanup): before cleanup, check signal buffer and run
	  handler if any.  [ruby-core:20970]

	* thread.c (rb_threadptr_check_signal): separeted from
	  timer_thread_function.

Tue Apr 27 18:00:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): fixed typo.
	  [ruby-core:29809]

Tue Apr 27 12:44:23 2010  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc: Import RDoc 2.5.7.  Fixes #1318 and ruby-core:29780.

Tue Apr 27 10:54:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
