@@ -1,3 +1,8 @@
+Wed Apr 28 16:44:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/ruby.h ({RSTRING,RSTRUCT,RBIGNUM}_LENINT): check long
+	  to cast to int.
+
 Wed Apr 28 16:28:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/socket/unixsocket.c (sendmsg_blocking, recvmsg_blocking):
